clusters/blimp/openvpn-web-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openvpn-web-ui
spec:
  type: NodePort
  selector:
    app: openvpn-web-ui
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  - port: 1194
    targetPort: 1194
    protocol: UDP
