clusters/blimp/openvpn-web-ui/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openvpn-web-ui
  labels:
    name: openvpn-web-ui
spec:
  rules:
    - host: vpn.qtosw.com
      http:
        paths:
          - backend: openvn-web-ui
            path: /
